--- a/.github/workflows/platformIO.yml
+++ b/.github/workflows/platformIO.yml
@@ -57,9 +57,9 @@ jobs:
             echo -e "\n" >> commit_msg.txt
           fi
 
-      - name: Change Version
-        run: |
-          sed -i "s/0\.0\.0/$(git describe --tags)/" ./include/version.h
+      # - name: Change Version
+      #   run: |
+      #     sed -i "s/0\.0\.0/$(git describe --tags)/" ./include/version.h
 
       - name: Install PlatformIO python
         uses: actions/setup-python@v4
